--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hono": "^4.11.7",
     "mongodb": "^7.1.0",
     "nats": "^2.29.3",
+    "openai": "^6.18.0",
     "pm2": "^6.0.14"
   },
   "devDependencies": {
